....IJ.... [ZBXNEXT-1889] made startup.sh and shutdown.sh scripts for Java gateway work in /bin/sh (asaveljevs)
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Slovak and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-7777] increased maximum data transfer limit per connection to remain consistent with 2.0 (Juris)
A......... [ZBX-7972] fixed not being able to full clone a template with an application if a destination host is specified (Ivo)
A......... [ZBX-7409] fixed inherited web items being added to incorrect applications when updating a template web scenario (Pavels)
..F....... [ZBX-7966] fixed possibility to copy a templated graph (Ivo)
..F....... [ZBX-7930] improved execution time in Maintenance page (Ivo)
..F....... [ZBX-7831] fixed regexp compilation errors for installations that use PHP with PCRE older than 7.0 (Pavels)
..F....... [ZBX-7884] fixed incorrect layering of modal window and made modal windows draggable and opaque (Ivo)
A......... [ZBX-7879] fixed creating and updating applications with multibyte characters in template which is linked to host while mbstring.func_overload set greater than 1 (Ivo)
...G...PS. [ZBX-7919] fixed hashset entry allocation overhead (wiper)
........S. [ZBX-7918] fixed value cache reporting more free space than actually available (wiper)
A.F....... [ZBX-7832] fixed screen item row- and colspans not being adjusted when reducing the size of a screen (Pavels)
........S. [ZBX-7620] improved error messaging and debug logging for VMware items (wiper)
........S. [ZBX-7897] fixed memory leak in trapper for log file items (Juris)
..F.....S. [ZBX-7872] removed discovery item prototype from calculation of required performace (NVPS) (igors)
........S. [ZBX-5778] removed counting items in queue if host is in maintenance with no data collection (igors)