@@ -1976,9 +1976,7 @@ function show_messages($bool = true, $okmsg = null, $errmsg = null) {
 		$page['type'] = PAGE_TYPE_HTML;
 	}
 
-	$message = array();
-	$width = 0;
-	$height= 0;
+	$imageMessages = array();
 
 	if (!$bool && !is_null($errmsg)) {
 		$msg = _('ERROR').': '.$errmsg;
@@ -1990,13 +1988,11 @@ function show_messages($bool = true, $okmsg = null, $errmsg = null) {
 	if (isset($msg)) {
 		switch ($page['type']) {
 			case PAGE_TYPE_IMAGE:
-				array_push($message, array(
+				// save all of the messages in an array to display them later in an image
+				$imageMessages[] = array(
 					'text' => $msg,
-					'color' => (!$bool) ? array('R' => 255, 'G' => 0, 'B' => 0) : array('R' => 34, 'G' => 51, 'B' => 68),
-					'font' => 2
-				));
-				$width = max($width, imagefontwidth(2) * zbx_strlen($msg) + 1);
-				$height += imagefontheight(2) + 1;
+					'color' => (!$bool) ? array('R' => 255, 'G' => 0, 'B' => 0) : array('R' => 34, 'G' => 51, 'B' => 68)
+				);
 				break;
 			case PAGE_TYPE_XML:
 				echo htmlspecialchars($msg)."\n";
@@ -2027,24 +2023,20 @@ function show_messages($bool = true, $okmsg = null, $errmsg = null) {
 
 	if (isset($ZBX_MESSAGES) && !empty($ZBX_MESSAGES)) {
 		if ($page['type'] == PAGE_TYPE_IMAGE) {
-			$msg_font = 2;
 			foreach ($ZBX_MESSAGES as $msg) {
+				// save all of the messages in an array to display them later in an image
 				if ($msg['type'] == 'error') {
-					array_push($message, array(
+					$imageMessages[] = array(
 						'text' => $msg['message'],
-						'color' => array('R' => 255, 'G' => 55, 'B' => 55),
-						'font' => $msg_font
-					));
+						'color' => array('R' => 255, 'G' => 55, 'B' => 55)
+					);
 				}
 				else {
-					array_push($message, array(
+					$imageMessages[] = array(
 						'text' => $msg['message'],
-						'color' => array('R' => 155, 'G' => 155, 'B' => 55),
-						'font' => $msg_font
-					));
+						'color' => array('R' => 155, 'G' => 155, 'B' => 55)
+					);
 				}
-				$width = max($width, imagefontwidth($msg_font) * zbx_strlen($msg['message']) + 1);
-				$height += imagefontheight($msg_font) + 1;
 			}
 		}
 		elseif ($page['type'] == PAGE_TYPE_XML) {
@@ -2078,24 +2070,39 @@ function show_messages($bool = true, $okmsg = null, $errmsg = null) {
 		$ZBX_MESSAGES = null;
 	}
 
-	if ($page['type'] == PAGE_TYPE_IMAGE && count($message) > 0) {
-		$width += 2;
-		$height += 2;
-		$canvas = imagecreate($width, $height);
-		imagefilledrectangle($canvas, 0, 0, $width, $height, imagecolorallocate($canvas, 255, 255, 255));
+	// draw an image with the messages
+	if ($page['type'] == PAGE_TYPE_IMAGE && count($imageMessages) > 0) {
+		$imageFontSize = 8;
 
-		foreach ($message as $id => $msg) {
-			$message[$id]['y'] = 1 + (isset($previd) ? $message[$previd]['y'] + $message[$previd]['h'] : 0);
-			$message[$id]['h'] = imagefontheight($msg['font']);
-			imagestring(
-				$canvas,
-				$msg['font'],
-				1,
-				$message[$id]['y'],
-				$msg['text'],
-				imagecolorallocate($canvas, $msg['color']['R'], $msg['color']['G'], $msg['color']['B'])
+		// calculate the size of the text
+		$imageWidth = 0;
+		$imageHeight = 0;
+		foreach ($imageMessages as &$msg) {
+			$size = imageTextSize($imageFontSize, 0, $msg['text']);
+			$msg['height'] = $size['height'] - $size['baseline'];
+
+			// calculate the total size of the image
+			$imageWidth = max($imageWidth, $size['width']);
+			$imageHeight += $size['height'] + 1;
+		}
+		unset($msg);
+
+		// additional padding
+		$imageWidth += 2;
+		$imageHeight += 2;
+
+		// create the image
+		$canvas = imagecreate($imageWidth, $imageHeight);
+		imagefilledrectangle($canvas, 0, 0, $imageWidth, $imageHeight, imagecolorallocate($canvas, 255, 255, 255));
+
+		// draw each message
+		$y = 1;
+		foreach ($imageMessages as $msg) {
+			$y += $msg['height'];
+			imageText($canvas, $imageFontSize, 0, 1, $y,
+				imagecolorallocate($canvas, $msg['color']['R'], $msg['color']['G'], $msg['color']['B']),
+				$msg['text']
 			);
-			$previd = $id;
 		}
 		imageOut($canvas);
 		imagedestroy($canvas);
